fixed image overflow

--- a/src/style/pages/_detail.scss
+++ b/src/style/pages/_detail.scss
@@ -60,3 +60,7 @@
     font-weight: 400;
     font-family: 'Roboto', sans-serif;
 }
+
+.blogdetailpicture{
+    max-width: 100%;
+}
